--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+}
 
 .container-fluid {
     padding: 0;
     margin-top: 0;
 }
-
+a {
+    text-decoration: none;
+    color: black;
+}
 body {
     background-color: #F3F4F6;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-
 }
 
 .header-left {
@@ -133,6 +142,20 @@ img {
 }
 
 
+.btn1 {
+    border-bottom: 2px solid #6366F1;
+    border-right: 0.5px solid #f1f1f1;
+    border-top: 0.5px solid #f1f1f1;
+    border-left: 0.5px solid #f1f1f1;
+}
+
+.btn2 {
+    border-bottom: 2px solid #f1f1f1;
+    border-right: 0.5px solid #f1f1f1;
+    border-top: 0.5px solid #f1f1f1;
+    border-left: 0.5px solid #f1f1f1;
+}
+
 
 
 @media only screen and (max-width: 600px) {
@@ -143,14 +166,14 @@ img {
         color: white;
         flex-direction: column;
         padding: 45px;
-        height: 250px;
+        height: 230px;
         }
     
     .header-right {
         margin: 0;
         padding: 0;
         background-color: #4F46E5;
-        height: 250px;
+        height: 230px;
     }
 
     .row {
@@ -165,7 +188,7 @@ img {
     }
     .background {
         width: 100%;
-        height: 250px;
+        height: 230px;
         background-position: center;
         background-size: cover;
         opacity: 88%;
